# tuc

./: .gitmodules  CMakeLists.txt  README.md  appveyor.yml
.circleci/: config.yml
.github/workflows/: cmake-multi-platform.yml
include/tuc/: filesystem.hpp  from_string.hpp  functional.hpp  functional_detail.hpp  numeric.hpp  openmp.hpp  raii.hpp  shared_queue.hpp  string.hpp  thread.hpp  thread_pool.hpp  throttle.hpp  to_string.hpp  to_string_detail.hpp
tests/: main.cpp  test-filesystem.cpp  test-from_string.cpp  test-functional.cpp  test-numeric.cpp  test-openmp.cpp  test-raii.cpp  test-shared_queue.cpp  test-string.cpp  test-thread.cpp  test-thread_pool.cpp  test-throttle.cpp  test-to_string.cpp
tests/msvc/: .gitignore  tuc-tests.sln  tuc-tests.vcxproj  tuc-tests.vcxproj.filters
